# motd-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
samples/macOS/: 00-header  10-help-text  90-updates-available  99-last-login
samples/ubuntu/: 00-header  10-help-text
src/: main.rs
tools/macOS/: Cargo.toml
