[package]
name = "motd"
description = "Message of the Day utility"
authors = ["Ian McLinden <mclinden.ian@gmail.com>"]
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.1", features = ["env", "cargo"] }
walkdir = "^2.3"

[workspace]
members = ["tools/macOS"]
