[package]
name = "tools-macos"
description = "macOS-specific motd tools"
authors = ["Ian McLinden <mclinden.ian@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.1", features = ["env", "cargo"] }
colored = { version = "^2" }
